array.island.Island.scala.error
Erreur de compilation :
Island:5: error: identifier expected but integer literal found.
  if (lenght.num==1 || (lenght.num==2) && num[0]==num[1]) {
                                              ^Island:15: error: ']' expected but '}' found.
} 
^